<resources>
    <string name="app_name">E-keys</string>
    <string name="name">name</string>
    <string name="password">password</string>
    <string name="connexion">connexion</string>
    <string name="create_account">create account</string>
    <string name="username_password_required">username and password required</string>
    <string name="tap_your_name">tap your name</string>
    <string name="tap_your_familyname">tap your familyname</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">phone number</string>
    <string name="tap_your_password">tap your password</string>
    <string name="confirm_your_password">confirm your password</string>
    <string name="cancel">cancel</string>
    <string name="create">create</string>
    <string name="title_activity_user_navigation_drawer">UserNavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart e-keys</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_cars">Cars</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">Map</string>
    <string name="email">email</string>
    <string name="logout">Logout</string>
    <string name="control">Control</string>
    <string name="users">users</string>
</resources>